--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Hola mundo</h1>
-    <a th:href="@{/publicacions}">Lista de usuario</a>
+    <a th:href="@{/publicacions}">Lista de Publicaciones</a>
+    <a th:href="@{/publicacions/nuevo}">Agreagar Publicaciones</a>
 </body>
 </html>
