--- a/src/main/resources/templates/views/publicacion/publicacions.html
+++ b/src/main/resources/templates/views/publicacion/publicacions.html
@@ -8,43 +8,34 @@
 <link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap4.min.css">
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-		<a class="navbar-brand" href="">Publicacion</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse"
-			data-target="#navbarNav" aria-controls="navbarNav"
-			aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse" id="navbarNav">
-			<ul class="navbar-nav">
-				<li class="nav-item"><a class="nav-link" href="/">Inicio</a></li>
-			</ul>
-		</div>
-	</nav>	
 			<div class="container">
 				<div class="row">
 			<table id="example" class="table table-bordered" style="width:100%">
 				<thead class="thead-dark">
 					<tr>
                         <th>ID</th>
-                        <th>Descripcion</th>
                         <th>Titulo</th>
                         <th>Fecha</th>
                         <th>Estado</th>
-						
                         <!--<th></th>-->
                         <th>Acciones</th>
 					</tr>
 				</thead>
 				<tbody>
-					<tr th:each="publicacion : ${listaPublicacions}">
+					<tr th:each="publicacion : ${listaPublicacion}">
 						<td th:text="${publicacion.idPublicacion}"></td>
-						<td th:text="${publicacion.descrip_Public}"></td>
-						<td th:text="${publicacion.titulo_Public}"></td>
-						<td th:text="${publicacion.fecha_Public}"></td>
-						<td th:text="${publicacion.estado_Public}"></td>
-						<!--<td th:text="${artista.estadoUsuario}"></td>
-						<td><a th:href="@{'/publicacions/editar'+'/'+ ${publicacion.idPublicacion}}"class="btn btn-info">Editar</a> &nbsp; </td>-->
+						<td th:text="${publicacion.titulo}"></td>
+						<td th:text="${publicacion.fecha}"></td>
+						
+						<td>
+							<span th:if="${publicacion.estado==true}">Activo</span>
+							<span th:if="${publicacion.estado==false}">Inactivo</span>
+						</td>
+
+						<td><a th:href="@{'/publicacions/editar'+'/'+ ${publicacion.idPublicacion}}"class="btn btn-info">Editar</a> &nbsp; 
+							<a th:if="${publicacion.estado==true}" th:href="@{'/publicacions/estado'+ '/' + ${publicacion.idPublicacion}}" class="btn btn-danger">Inactivar</a>
+                        <a th:if="${publicacion.estado==false}" th:href="@{'/publicacions/estado'+ '/' + ${publicacion.idPublicacion}}" class="btn btn-info">Activar</a>
+						</td>
 					</tr>
 				</tbody>
 			</table>
@@ -56,10 +47,5 @@
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap4.min.js"></script>
-    <script>
-    $(document).ready(function () {
-    $('#example').DataTable();
-    });
-</script>
 </body>
 </html>
